# Automatic-Index-Creation-for-PostgreSql

./: .gitignore  README.md  project_proposal.txt
code/: CMakeLists.txt  Makefile  common-headers.h  datastructures.cpp  datastructures.hh  fifo.cpp  fifo.hh  get_cost.py  helper.cpp  helper.h  index.cpp  index.h  keywords.h  keywords.hh  main.cpp  memory.cpp  memory.h  python_bridge.cpp  python_bridge.h  query_parser.py  run  run.sh  tempParse.txt  tempQuery.sql  terminal_outs.txt
documentation/: presentation.tex  readme.blg  readme.tex  ref.bib
theory/: An automatic indexing system for Postgres: How we built the pganalyze Indexing Engine.html
